style.css
#body {
  background-color: lightblue;
}

#header {
  position: fixed;
  background-color: black;
  height: 95px;
  width: 84%;
  top: 0;
  left: 0;
}

#center {
  margin: auto;
}

#spacer {
  display: flex;
  align-items: center;
  background-color: black;
  position: absolute;
  min-height: 95px;
  width: 100%;
  height: 70%;
  margin: auto;
  display: inline-block;
  padding-top: 0;
}

#navbar {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  padding-top: 15px;
}

.links {
  font-size: 27px;
  list-style-type: none;
}

li a {
  text-decoration: none;
  color: white;
}

li a:hover {
  color: orange;
}

#burger {
  height: 95px;
}

body {
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
}

